--- a/membres/baris/baris.html
+++ b/membres/baris/baris.html
@@ -179,7 +179,58 @@
   </div>
 </div>
 <!--préparation -->
+<<!-- Valeurs Nutritionnelles -->
+<div class="container my-5" data-aos="fade-up">
+  <div class="row justify-content-md-center">
+    <div class="col-12 col-md-10 col-lg-8 col-xl-7 text-center">
+      <h2 class="recettee fw-bold mb-3" data-aos="fade-up">Valeurs Nutritionnelles</h2>
+      <p class="lead mb-4" data-aos="fade-up" data-aos-delay="100">
+        Voici les valeurs nutritionnelles approximatives pour une portion de Dakgangjeong :
+      </p>
+      <ul class="list-unstyled" data-aos="fade-up" data-aos-delay="200">
+        <li><i class="bi bi-bar-chart"></i> Calories : 350</li>
+        <li><i class="bi bi-egg-fried"></i> Protéines : 20g</li>
+        <li><i class="bi bi-graph-up"></i> Glucides : 40g</li>
+        <li><i class="bi bi-droplet"></i> Lipides : 15g</li>
+        <li><i class="bi bi-bar-chart-steps"></i> Fibres : 2g</li>
+        <li><i class="bi bi-bucket"></i> Sodium : 800mg</li>
+      </ul>
+    </div>
+  </div>
+</div>
 
+<!-- Notes et Évaluations -->
+<div class="container my-5" data-aos="fade-up">
+  <div class="row justify-content-md-center">
+    <div class="col-12 col-md-10 col-lg-8 col-xl-7">
+      <h2 class="recettee fw-bold mb-3 text-center" data-aos="fade-up">Notes et Évaluations</h2>
+      <p class="lead mb-4 text-center" data-aos="fade-up" data-aos-delay="100">
+        Donnez votre avis sur cette recette :
+      </p>
+      <div id="evaluations" data-aos="fade-up" data-aos-delay="200">
+        <form>
+          <div class="mb-3">
+            <label for="note" class="form-label">Note :</label>
+            <select id="note" name="note" class="form-select">
+              <option value="1">1 étoile</option>
+              <option value="2">2 étoiles</option>
+              <option value="3">3 étoiles</option>
+              <option value="4">4 étoiles</option>
+              <option value="5">5 étoiles</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="commentaire" class="form-label">Commentaire :</label>
+            <textarea id="commentaire" name="commentaire" rows="4" cols="50" class="form-control"></textarea>
+          </div>
+          <div class="text-center">
+            <button type="submit" class="btn btn-primary">Soumettre</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
