--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -170,7 +170,7 @@
                 <div class="col-md-12">
                     <div class="block">
                         <h1 class="heading wow fadeInUp" data-wow-duration="300ms" data-wow-delay="300ms"><span>DEMI-GLACE SAUCE</span></h1>
-                        <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco </p>
+                        <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">Preparation de DEMI-GLACE SAUCE </p>
                         <section class="slider">
                             <div class="container">
                                 <div class="row">
@@ -270,7 +270,7 @@
                 <div class="col-md-12">
                     <div class="block">
                         <h1 class="heading wow fadeInUp" data-wow-duration="300ms" data-wow-delay="300ms"><span>FRIED RICE</span></h1>
-                        <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco </p>
+                        <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">Preparation de FRIED RICE</p>
                         <section class="slider">
                             <div class="container">
                                 <div class="row">
@@ -396,7 +396,7 @@
                 <div class="col-md-12">
                     <div class="block">
                         <h1 class="heading wow fadeInUp" data-wow-duration="300ms" data-wow-delay="300ms"><span>OMELETTE</span></h1>
-                        <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco </p>
+                        <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">Preparation d'OMELETTE </p>
                         <section class="slider">
                             <div class="container">
                                 <div class="row">
