--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -44,11 +44,6 @@
         <link href="../assets/css/baris.css" rel="stylesheet">
         <link href="../assets/css/footer.css" rel="stylesheet">
 
-
-
-
-
-		
     <style>
         h3, span, p {
     background: linear-gradient(to left top, black, red);
@@ -117,7 +112,6 @@
         
             </div>
           </header>
-
 
 
 	<!--
@@ -240,7 +234,13 @@
                                         </div>                                        
                                     </div>                                    
                                 </li>
-                                <img src="images/01-Omurice-Sauce-Ingredients.jpg" alt="" height="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/01-Omurice-Sauce-Ingredients.jpg" alt="" height="250px" class="wow fadeInUp rounded-4">
+                                        </div>
+                                    </div>
+                                </div>                                
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">
                                     <div class="item">
                                         <div class="item-title">
@@ -248,15 +248,27 @@
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/02.webp" alt="" width="250px">
-                                <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/02.webp" alt="" width="250px">
+                                        </div>
+                                    </div>
+                                </div>                                
+                                <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms" class="wow fadeInUp rounded-4">
                                     <div class="item">
                                         <div class="item-title">
                                             <h2>3. Versez la sauce de l'étape 1 et remuez bien. Augmentez le feu et faites cuire à feu moyen-doux à moyen jusqu'à ce que la sauce épaississe (environ 8 à 10 minutes). Remuez souvent. Mettre de côté.</h2>
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/3.webp" alt="" width="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/3.webp" alt="" width="250px" class="wow fadeInUp rounded-4">
+                                        </div>
+                                    </div>
+                                </div>                                
                             </ul>
                         </div>
                     </div>
@@ -358,7 +370,13 @@
                                         </div>                                        
                                     </div>                                    
                                 </li>
-                                <img src="images/04.jpg" alt="" height="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/04.jpg" alt="" height="250px" class="wow fadeInUp rounded-4">
+                                        </div>
+                                    </div>
+                                </div>                                
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">
                                     <div class="item">
                                         <div class="item-title">
@@ -366,7 +384,13 @@
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/05.webp" alt="" width="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/05.webp" alt="" width="250px" class="wow fadeInUp rounded-4">
+                                        </div>
+                                    </div>
+                                </div>                                
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
                                     <div class="item">
                                         <div class="item-title">
@@ -374,7 +398,13 @@
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/06.webp" alt="" width="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/06.webp" alt="" width="250px" class="wow fadeInUp rounded-4">
+                                        </div>
+                                    </div>
+                                </div>                                
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
                                     <div class="item">
                                         <div class="item-title">
@@ -382,7 +412,13 @@
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/07.webp" alt="" width="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/07.webp" alt="" width="250px" class="wow fadeInUp rounded-4">
+                                        </div>
+                                    </div>
+                                </div>                                
                             </ul>
                         </div>
                     </div>
@@ -442,7 +478,13 @@
                                         </div>                                        
                                     </div>                                    
                                 </li>
-                                <img src="images/08.webp" alt="" height="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/08.webp" alt="" height="250px" class="wow fadeInUp rounded-4" >
+                                        </div>
+                                    </div>
+                                </div>                                  
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">
                                     <div class="item">
                                         <div class="item-title">
@@ -457,7 +499,13 @@
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/09.webp" alt="" width="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/09.webp" alt="" width="250px" class="wow fadeInUp rounded-4" >
+                                        </div>
+                                    </div>
+                                </div>                                  
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
                                     <div class="item">
                                         <div class="item-title">
@@ -465,7 +513,16 @@
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/10.webp" alt="" width="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-3">
+                                            <img src="images/10.webp" alt="" width="250px" class="wow fadeInUp rounded-4" >                                                                                       
+                                        </div>
+                                        <div class="col-lg-6">                                            
+                                            <img src="images/11.webp" alt="" width="250px" class="wow fadeInUp mt-5 rounded-4">                                            
+                                        </div>
+                                    </div>
+                                </div>                                  
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
                                     <div class="item">
                                         <div class="item-title">
@@ -473,7 +530,13 @@
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/11.webp" alt="" width="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/11.webp" alt="" width="250px" class="wow fadeInUp rounded-4" >
+                                        </div>
+                                    </div>
+                                </div>                                
                                 <li class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="500ms">
                                     <div class="item">
                                         <div class="item-title">
@@ -481,7 +544,13 @@
                                         </div>
                                     </div>
                                 </li>
-                                <img src="images/12.webp" alt="" width="250px">
+                                <div class="container mb-5">
+                                    <div class="row justify-content-center">
+                                        <div class="col-lg-6">
+                                            <img src="images/12.webp" alt="" width="250px" class="wow fadeInUp rounded-4">
+                                        </div>
+                                    </div>
+                                </div>            
                             </ul>
                         </div>
                     </div>
@@ -489,6 +558,14 @@
             </div><!-- .row close -->
         </div><!-- .containe close -->
     </section><!-- #price close -->
+    <div class="container mb-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-5">
+                <iframe src="https://assets.pinterest.com/ext/embed.html?id=365213851048375044" height="614" width="345" frameborder="0" scrolling="no" ></iframe>
+            </div>
+        </div>
+    </div>
+    
 
     <footer class="footer" style="background-image: url(../assets/img/baris/footerImg.png);">
         <div class="container">
