--- a/membres/baris/baris.html
+++ b/membres/baris/baris.html
@@ -161,8 +161,8 @@
   <div class="row">
     <div class="col-md-6" data-aos="fade-right">
       <h1 class="recettee" data-aos="fade-up">Préparation</h1>
-      <h3 class="etape-preparation" data-aos="fade-up">Étapes de la préparation</h3>
-      <ol data-aos="fade-up" data-aos-delay="100">
+      <h3 class="etape-preparation" data-aos="fade-up"  style="color: red;";>Étapes de la préparation</h3>
+      <ol data-aos="fade-up" data-aos-delay="100" style="padding: 15px; border: solid black;">
         <li>Commencez par mariner le poulet avec le sel, le poivre, le vin de riz et le gingembre râpé. Laissez reposer pendant au moins 30 minutes.</li>
         <li>Préparez la pâte à frire en mélangeant la farine de blé, la fécule de maïs, l'œuf et l'eau froide jusqu'à obtenir une texture lisse.</li>
         <li>Chauffez l'huile dans une casserole ou une friteuse à 180°C.</li>
@@ -189,9 +189,9 @@
 <!-- Valeurs Nutritionnelles -->
 <div class="container my-5 d-flex align-items-center justify-content-center min-vh-100">
   <div class="row w-100 justify-content-center">
-    <div class="col-12 col-md-10 col-lg-8 col-xl-7 text-center">
+    <div class="col-12 col-md-10 col-lg-8 col-xl-7 text-center" >
       <h2 class="recettee fw-bold mb-4" data-aos="fade-up">Valeurs <span class="text-green">Nutritionnelles</span></h2>
-      <div class="nutrition-values" data-aos="fade-up" data-aos-delay="100">
+      <div class="nutrition-values" data-aos="fade-up" data-aos-delay="100" style="padding: 15px; border: solid black;" >
         <div class="nutrition-item">
           <i class="bi bi-bar-chart"></i> <span>Calories :</span> 350
         </div>
@@ -221,10 +221,10 @@
   <div class="row justify-content-md-center">
     <div class="col-12 col-md-10 col-lg-8 col-xl-7">
       <h2 class="recettee fw-bold mb-3 text-center" data-aos="fade-up">Notes et <span class="text-yellow">Évaluations</span></h2>
-      <p class="lead mb-4 text-center" data-aos="fade-up" data-aos-delay="100">
+      <p class="lead mb-4 text-center" data-aos="fade-up" data-aos-delay="100" >
         Donnez votre avis sur cette recette :
       </p>
-      <div id="evaluations" data-aos="fade-up" data-aos-delay="200">
+      <div id="evaluations" data-aos="fade-up" data-aos-delay="200" style="padding: 15px; border: solid black;">
         <form id="evaluationForm">
           <div class="mb-4">
             <label for="note" class="form-label">Note :</label>
