changement disposition col

--- a/membres/Anthony/recette/recetteAntho.html
+++ b/membres/Anthony/recette/recetteAntho.html
@@ -95,7 +95,7 @@
     <h1 id="titreRecette" class="mb-4"><span class="spanRouge">S</span>ushi
       <span class="spanRouge">J</span>aponais
     </h1>
-    <img src="sushi.jpg" alt="" id="sushi" class="img-fluid">
+    <img src="sushi.jpg" alt="" id="sushi" class="img">
 
   </div>
 
@@ -146,17 +146,17 @@
         </ul>
       </div>
 
-      <div class="col-md-6 text-center mt-5">
+      <div class="col-md-6 text-center mt-5 ">
         <img src="ingredients.jpeg" alt="ingredients sushi" class="img-fluid" id="sushiIngredients">
       </div>
     </div>
 
     <!-- Section pour la préparation -->
-    <div class="row mt-4">
+    <div class="row mt-4 ">
       <div class="col-6 d-flex align-items-center">
         <img src="stepSushi.png" alt="sushi steps" class="img-fluid" id="sushiSteps">
       </div>
-      <div class="col-6">
+      <div class="col-5">
         <h3 class="fw-bold ms-4 ps-1"><span class="spanIngredients">P</span>réparation :</h3>
         <ol class="mt-3">
 
