--- a/membres/baris/baris.html
+++ b/membres/baris/baris.html
@@ -114,7 +114,7 @@
     </div>
     <div class="col-md-6" data-aos="fade-left">
       <h2 class="ingre" data-aos="fade-up">Ingrédients</h2>
-      <div class="justify-content-center" style="padding: 15px; border: solid black;">
+      <div class="box-shadow" style="padding: 15px; border: solid black;">
         <p data-aos="fade-up" data-aos-delay="100">
           Dakgangjeong est un plat coréen de poulet frit en sauce sucrée et épicée. Voici les ingrédients typiques pour préparer Dakgangjeong :
         </p>
@@ -154,15 +154,14 @@
     </div>
   </div>
 </div>
-<!-- Ingrédients -->
 
 <!-- Préparation -->
-<div class="container" data-aos="fade-up">
+<div class="container preparation-section" data-aos="fade-up">
   <div class="row">
     <div class="col-md-6" data-aos="fade-right">
       <h1 class="recettee" data-aos="fade-up">Préparation</h1>
-      <h3 class="etape-preparation" data-aos="fade-up">Étapes de la préparation</h3>
-      <ol data-aos="fade-up" data-aos-delay="100">
+      <h3 class="etape-preparation" data-aos="fade-up" style="color: red;">Étapes de la préparation</h3>
+      <ol class="box-shadow" data-aos="fade-up" data-aos-delay="100" style="padding: 15px; border: solid black;">
         <li>Commencez par mariner le poulet avec le sel, le poivre, le vin de riz et le gingembre râpé. Laissez reposer pendant au moins 30 minutes.</li>
         <li>Préparez la pâte à frire en mélangeant la farine de blé, la fécule de maïs, l'œuf et l'eau froide jusqu'à obtenir une texture lisse.</li>
         <li>Chauffez l'huile dans une casserole ou une friteuse à 180°C.</li>
@@ -178,20 +177,19 @@
       </div>
       <p class="legende-image" data-aos="fade-up" data-aos-delay="200">Image de la préparation finale du Dakgangjeong.</p>
       <div class="video-container" data-aos="fade-up" data-aos-delay="300">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/9Q8YuR7V_vU?si=KKNrc9mkD6n7qBnl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/9Q8YuR7V_vU?autoplay=1&mute=1&si=KKNrc9mkD6n7qBnl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
   </div>
 </div>
 
-<!--préparation -->
 
 <!-- Valeurs Nutritionnelles -->
-<div class="container my-5" data-aos="fade-up">
-  <div class="row justify-content-md-center">
+<div class="container d-flex align-items-center justify-content-center nutrition-section">
+  <div class="row w-100 justify-content-center">
     <div class="col-12 col-md-10 col-lg-8 col-xl-7 text-center">
       <h2 class="recettee fw-bold mb-4" data-aos="fade-up">Valeurs <span class="text-green">Nutritionnelles</span></h2>
-      <div class="nutrition-values" data-aos="fade-up" data-aos-delay="100">
+      <div class="box-shadow" data-aos="fade-up" data-aos-delay="100" style="padding: 15px; border: solid black;">
         <div class="nutrition-item">
           <i class="bi bi-bar-chart"></i> <span>Calories :</span> 350
         </div>
@@ -215,9 +213,6 @@
   </div>
 </div>
 
-
-<!-- Valeurs Nutritionnelles -->
-
 <!-- Notes et Évaluations -->
 <div class="container my-5">
   <div class="row justify-content-md-center">
@@ -226,21 +221,31 @@
       <p class="lead mb-4 text-center" data-aos="fade-up" data-aos-delay="100">
         Donnez votre avis sur cette recette :
       </p>
-      <div id="evaluations" data-aos="fade-up" data-aos-delay="200">
+      
+      <!-- Section pour afficher les évaluations -->
+      <div id="evaluationsList" class="mt-5">
+        <h3 class="fw-bold mb-3" style="border: solid black; text-align: center; border-radius: 20px;">Évaluations des utilisateurs</h3>
+        <div id="commentList"></div>
+      </div>
+
+      <div class="text-center mb-4">
+        <button id="toggle-evaluation" class="btn btn-custom">Donnez votre avis !</button>
+      </div>
+      <div id="evaluations" class="box-shadow" data-aos="fade-up" data-aos-delay="200" style="padding: 15px; border: solid black; display: none;">
         <form id="evaluationForm">
           <div class="mb-4">
             <label for="note" class="form-label">Note :</label>
-            <div id="star-rating" class="text-center">
-              <input type="radio" id="star5" name="note" value="5" />
-              <label for="star5" title="5 étoiles"><i class="bi bi-star-fill"></i></label>
-              <input type="radio" id="star4" name="note" value="4" />
-              <label for="star4" title="4 étoiles"><i class="bi bi-star-fill"></i></label>
-              <input type="radio" id="star3" name="note" value="3" />
-              <label for="star3" title="3 étoiles"><i class="bi bi-star-fill"></i></label>
-              <input type="radio" id="star2" name="note" value="2" />
-              <label for="star2" title="2 étoiles"><i class="bi bi-star-fill"></i></label>
-              <input type="radio" id="star1" name="note" value="1" />
-              <label for="star1" title="1 étoile"><i class="bi bi-star-fill"></i></label>
+            <div id="star-rating">
+              <input type="radio" id="star1" name="rating" value="1" />
+              <label for="star1" title="1 star">★</label>
+              <input type="radio" id="star2" name="rating" value="2" />
+              <label for="star2" title="2 stars">★</label>
+              <input type="radio" id="star3" name="rating" value="3" />
+              <label for="star3" title="3 stars">★</label>
+              <input type="radio" id="star4" name="rating" value="4" />
+              <label for="star4" title="4 stars">★</label>
+              <input type="radio" id="star5" name="rating" value="5" />
+              <label for="star5" title="5 stars">★</label>
             </div>
           </div>
           <div class="mb-4 commentaire-container">
@@ -256,18 +261,9 @@
           </div>
         </form>
       </div>
-
-      <!-- Section pour afficher les évaluations -->
-      <div id="evaluationsList" class="mt-5">
-        <h3 class="fw-bold mb-3">Évaluations des utilisateurs</h3>
-        <div id="commentList"></div>
-      </div>
     </div>
   </div>
 </div>
-
-
-
 
 
 
