--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -270,7 +270,7 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-4 col-md-6 col-sm-6 col-8">
                                             <img src="images/01-Omurice-Sauce-Ingredients.jpg" alt="" height="250px" class="wow fadeInUp rounded-4">
                                         </div>
                                     </div>
@@ -284,7 +284,7 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/02.webp" alt="" width="250px">
                                         </div>
                                     </div>
@@ -298,7 +298,7 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/3.webp" alt="" width="250px" class="wow fadeInUp rounded-4">
                                         </div>
                                     </div>
@@ -406,7 +406,7 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/04.jpg" alt="" height="250px" class="wow fadeInUp rounded-4">
                                         </div>
                                     </div>
@@ -420,7 +420,7 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/05.webp" alt="" width="250px" class="wow fadeInUp rounded-4">
                                         </div>
                                     </div>
@@ -434,7 +434,7 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/06.webp" alt="" width="250px" class="wow fadeInUp rounded-4">
                                         </div>
                                     </div>
@@ -448,7 +448,7 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/07.webp" alt="" width="250px" class="wow fadeInUp rounded-4">
                                         </div>
                                     </div>
@@ -514,7 +514,7 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/08.webp" alt="" height="250px" class="wow fadeInUp rounded-4" >
                                         </div>
                                     </div>
@@ -535,7 +535,7 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/09.webp" alt="" width="250px" class="wow fadeInUp rounded-4" >
                                         </div>
                                     </div>
@@ -549,10 +549,10 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-3">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/10.webp" alt="" width="250px" class="wow fadeInUp rounded-4" >                                                                                       
                                         </div>
-                                        <div class="col-lg-6">                                            
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">                                            
                                             <img src="images/11.webp" alt="" width="250px" class="wow fadeInUp mt-5 rounded-4">                                            
                                         </div>
                                     </div>
@@ -566,7 +566,7 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/11.webp" alt="" width="250px" class="wow fadeInUp rounded-4" >
                                         </div>
                                     </div>
@@ -580,14 +580,14 @@
                                 </li>
                                 <div class="container mb-5">
                                     <div class="row justify-content-center">
-                                        <div class="col-lg-6">
+                                        <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                             <img src="images/12.webp" alt="" width="250px" class="wow fadeInUp rounded-4">
                                         </div>
                                     </div>
                                 </div>            
                             </ul>
                         </div>
-                    </div>
+            col-lg-3 col-md-6 col-sm-6 col-8
                 </div><!-- .col-md-12 close -->
             </div><!-- .row close -->
         </div><!-- .containe close -->
@@ -601,7 +601,7 @@
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">Recette De L'omelette Au Riz Japonaise | Omurice</p>
                         <div class="container">
                             <div class="row justify-content-center">
-                                <div class="col-lg-3">
+                                <div class="col-lg-3 col-md-6 col-sm-6 col-8">
                                     <iframe src="https://assets.pinterest.com/ext/embed.html?id=365213851048375044?autoplay=1&mute=1&loop=1" height="614" width="345" frameborder="0" scrolling="no" ></iframe>
                                 </div>
                             </div>
