--- a/membres/baris/baris.html
+++ b/membres/baris/baris.html
@@ -184,6 +184,9 @@
 </div>
 
 
+
+
+
 <!-- Valeurs Nutritionnelles -->
 <div class="container d-flex align-items-center justify-content-center nutrition-section">
   <div class="row w-100 justify-content-center">
@@ -213,39 +216,20 @@
   </div>
 </div>
 
-<!-- Notes et Évaluations -->
 <div class="container my-5">
   <div class="row justify-content-md-center">
     <div class="col-12 col-md-10 col-lg-8 col-xl-7">
       <h2 class="recettee fw-bold mb-3 text-center" data-aos="fade-up">Notes et <span class="text-yellow">Évaluations</span></h2>
-      <p class="lead mb-4 text-center" data-aos="fade-up" data-aos-delay="100" >
+      <p class="lead mb-4 text-center" data-aos="fade-up" data-aos-delay="100">
         Donnez votre avis sur cette recette :
       </p>
-      
-      <!-- Section pour afficher les évaluations -->
-      <div id="evaluationsList" class="mt-5">
-        <h3 class="fw-bold mb-3" style="border: solid black; text-align: center; border-radius: 20px;">Évaluations des utilisateurs</h3>
-        <div id="commentList"></div>
-      </div>
-
       <div class="text-center mb-4">
-        <button id="toggle-evaluation" class="btn btn-custom">Donnez votre avis !</button>
+        <button id="toggle-evaluation" class="btn btn-custom">Afficher l'évaluation</button>
       </div>
       <div id="evaluations" class="box-shadow" data-aos="fade-up" data-aos-delay="200" style="padding: 15px; border: solid black; display: none;">
         <form id="evaluationForm">
           <div class="mb-4">
             <label for="note" class="form-label">Note :</label>
-            <div id="star-rating">
-              <input type="radio" id="star1" name="rating" value="1" />
-              <label for="star1" title="1 star">★</label>
-              <input type="radio" id="star2" name="rating" value="2" />
-              <label for="star2" title="2 stars">★</label>
-              <input type="radio" id="star3" name="rating" value="3" />
-              <label for="star3" title="3 stars">★</label>
-              <input type="radio" id="star4" name="rating" value="4" />
-              <label for="star4" title="4 stars">★</label>
-              <input type="radio" id="star5" name="rating" value="5" />
-              <label for="star5" title="5 stars">★</label>
             <div id="star-rating">
               <input type="radio" id="star1" name="rating" value="1" />
               <label for="star1" title="1 star">★</label>
