--- a/membres/baris/baris.html
+++ b/membres/baris/baris.html
@@ -224,7 +224,7 @@
         Donnez votre avis sur cette recette :
       </p>
       <div class="text-center mb-4">
-        <button id="toggle-evaluation" class="btn btn-custom">Afficher l'évaluation</button>
+        <button id="toggle-evaluation" class="btn btn-custom"> Donnez votre avis !</button>
       </div>
       <div id="evaluations" class="box-shadow" data-aos="fade-up" data-aos-delay="200" style="padding: 15px; border: solid black; display: none;">
         <form id="evaluationForm">
