--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -45,7 +45,7 @@
         <link href="../assets/css/footer.css" rel="stylesheet">
 
     <style>
-        h3, span, p {
+        h3, span, p, .hero-title {
     background: linear-gradient(to left top, black, red);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -587,7 +587,6 @@
                                 </div>            
                             </ul>
                         </div>
-            col-lg-3 col-md-6 col-sm-6 col-8
                 </div><!-- .col-md-12 close -->
             </div><!-- .row close -->
         </div><!-- .containe close -->
@@ -601,7 +600,7 @@
                         <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="400ms">Recette De L'omelette Au Riz Japonaise | Omurice</p>
                         <div class="container">
                             <div class="row justify-content-center">
-                                <div class="col-lg-3 col-md-6 col-sm-6 col-8">
+                                <div class="col-lg-3 col-md-6 col-sm-7 col-12">
                                     <iframe src="https://assets.pinterest.com/ext/embed.html?id=365213851048375044?autoplay=1&mute=1&loop=1" height="614" width="345" frameborder="0" scrolling="no" ></iframe>
                                 </div>
                             </div>
