--- a/membres/Erhan/Omurice/index.html
+++ b/membres/Erhan/Omurice/index.html
@@ -76,7 +76,7 @@
                   <li><a class="fs-sm-4" href="#hero" class="active"><img class="iconR" src="../assets/img/button/home.png" alt=""> Accueil<br></a></li>
                  
                   
-                    <li class="dropdown"><a href="#menu"><span><img style="padding-left: 5px;"  class="iconR" src="../assets/img/button/ramen.png" alt=""> Recettes</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                    <li class="dropdown"><a href="#menu"><img style="padding-left: 5px;"  class="iconR" src="../assets/img/button/ramen.png" alt=""> Recettes <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul class="sousMenu">
                       <li><a class="fs-4" href="#">Recettes 1</a></li>
                       <li><a class="fs-4" href="#">Recettes 2</a></li>
