--- a/membres/Marwan/PageRecetteMarwan.html
+++ b/membres/Marwan/PageRecetteMarwan.html
@@ -91,7 +91,7 @@
               <img  id="sugoi"  src="../../assets/img/logo/vagues-navbar-nobackground.png" alt="">
               <script>
                 $(document).ready(function(){
-                  $("#sugoi").animate({left: '420px'}, {duration : 1050});
+                  $("#sugoi").animate({left: '500px'}, {duration : 1050});
                   $("#sugoi2").animate({left: '-10px'}, {duration : 1050});
                 });
       
@@ -170,7 +170,7 @@
             <div   class="row justify-content-center">
               <div data-aos="fade-up" data-aos-duration="1000" style="background-color:rgb(0, 0, 0);" class="col-11  rounded  ">
                 
-                <h4  class="text-center border-bottom border-dark  " style="color: green; font-size: 45px; background-color: rgb(0, 0, 0);">Temps Total 35min</h4></div>
+                <h4  class="text-center border-bottom border-dark  " style="color: white; font-size: 45px; background-color: rgb(0, 0, 0);">Temps Total 35min</h4></div>
   
                 <div id="etapes-container" class="col-lg-11 mt-4 ">
                     <div id="step1" class="etape text-center mt-3" data-aos="fade-up" data-aos-duration="1000">
